[~] Revise CV details for clarity and accuracy

--- a/cv.html
+++ b/cv.html
@@ -327,7 +327,7 @@
 
             <div class="skill-block">
                 <span class="skill-title">Développement</span>
-                <span class="skill-desc">C (Avancé), Python, HTML/CSS</span>
+                <span class="skill-desc">C, Python, HTML/CSS</span>
             </div>
 
             <h2>Langues</h2>
@@ -337,7 +337,7 @@
             </div>
             <div class="skill-block">
                 <span class="skill-title">Anglais (B2)</span>
-                <span class="skill-desc">Technique & Opérationnel<br>(TEPITECH : 735)</span>
+                <span class="skill-desc">(TOIC : 735)</span>
             </div>
 
             <h2>Intérêts</h2>
@@ -346,8 +346,8 @@
                 <span class="skill-desc">Concerts Aéronef & Orchestre National de Lille</span>
             </div>
             <div class="skill-block">
-                <span class="skill-title">Exploration & Cyber</span>
-                <span class="skill-desc">Urbex, Cartographie, HackTheBox</span>
+                <span class="skill-title">Exploration</span>
+                <span class="skill-desc">Urbex, Hauteurs, Nature</span>
             </div>
 
             <div class="qr-section">
@@ -359,12 +359,12 @@
         <main class="main">
             <header>
                 <h1>ADAM KATTOUF</h1>
-                <div class="subtitle">Étudiant en informatique</div>
+                <div class="subtitle">Étudiant en 1re année à Epitech</div>
                 <div class="availability">Recherche de stage (4 à 6 mois) - <strong>Juin à Décembre 2026</strong></div>
             </header>
 
             <div class="summary">
-                Étudiant en informatique passionné par l'administration système et la cybersécurité. Fort d'une expérience très polyvalente en restauration à spectacles, j'ai développé une grande capacité d'adaptation et un sens aigu du service client. Je recherche un stage technique où je pourrai mettre ma débrouillardise (hardware/software) et ma rigueur au service de vos équipes hôtelières.
+                Étudiant en informatique, je suis curieux et polyvalent. Mon expérience en restauration à spectacles m’a permis de développer un vrai sens du service client et une grande capacité d’adaptation. Je cherche un stage technique où je pourrai mettre ma débrouillardise, mon intérêt pour le hardware et le software, ainsi que ma rigueur, au service de vos équipes.
             </div>
 
             <section class="education-section">
