Refine descriptions in cv.html for clarity

--- a/cv.html
+++ b/cv.html
@@ -396,9 +396,9 @@
                     <div class="item-sub">Petrouchka | Lille</div>
                     <div class="item-desc">
                         <ul>
-                            <li><strong>Service & Relationnel :</strong> Accueil, service en salle et encaissement (fort volume).</li>
+                            <li><strong>Service & Relationnel :</strong> Accueil, service en salle et encaissement.</li>
                             <li><strong>Polyvalence :</strong> Logistique, entretien, cuisine, aide son/lumière.</li>
-                            <li><strong>Technique :</strong> Prise en main autonome des régies son/lumière en urgence.</li>
+                            <li><strong>Technique :</strong> Prise en main autonome des régies son/lumière.</li>
                         </ul>
                     </div>
                 </div>
@@ -416,7 +416,7 @@
                     <div class="item-desc">
                         <ul>
                             <li>Configuration serveur hébergé à domicile accessible via le web (cociska.dev).</li>
-                            <li>Déploiement services (Web, NAS) et automatisation des tâches.</li>
+                            <li>Déploiement services (Web, NAS) et automatisation des tâches (n8n).</li>
                         </ul>
                     </div>
                 </div>
@@ -429,7 +429,7 @@
                     <div class="item-sub">Virtualisation & Sécurité</div>
                     <div class="item-desc">
                         <ul>
-                            <li>Installation sécurisée Dual Boot (Fedora / Arch Linux).</li>
+                            <li>Installation sécurisée Dual Boot (Fedora / Arch Linux / VM).</li>
                             <li>Configuration SSH, gestion permissions et scripting Bash.</li>
                         </ul>
                     </div>
@@ -442,7 +442,7 @@
                     </div>
                     <div class="item-desc">
                         <ul>
-                            <li><strong>My_Hunter / My_Radar :</strong> Moteurs de jeux 2D (CSFML) avec gestion mémoire.</li>
+                            <li><strong>My_Hunter / My_Radar :</strong> Reproduction du jeu duckhunt et d'une simulation de radar aérien (CSFML) avec gestion mémoire.</li>
                             <li><strong>Secured :</strong> Table de hachage optimisée pour stockage sécurisé.</li>
                         </ul>
                     </div>
@@ -455,7 +455,7 @@
                     </div>
                     <div class="item-desc">
                         <ul>
-                            <li>Développement d'un outil de cartographie interactif (GitHub).</li>
+                            <li>Développement d'un outil de cartographie interactif web (gestion API).</li>
                         </ul>
                     </div>
                 </div>
