Update availability dates for internship

--- a/cv.html
+++ b/cv.html
@@ -360,7 +360,7 @@
             <header>
                 <h1>ADAM KATTOUF</h1>
                 <div class="subtitle">Étudiant en 1re année à Epitech</div>
-                <div class="availability">Recherche de stage (4 à 6 mois) - <strong>Juin à Décembre 2026</strong></div>
+                <div class="availability">Recherche de stage (4 à 6 mois) - <strong>Juillet à Décembre 2026</strong></div>
             </header>
 
             <div class="summary">
