--- a/index.html
+++ b/index.html
@@ -1,114 +1,192 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio - En maintenance</title>
-        <style>
-            body {
-                /* Même beige que la sidebar de ton CV pour la cohérence */
-                background-color: #E8E6E1; 
-                color: #2D2D2D;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                height: 100vh;
-                margin: 0;
-                text-align: center;
-                padding: 20px;
-            }
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Adam Kattouf | Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        :root {
+            --bg-color: #E8E6E1; /* Beige Sable du CV */
+            --accent-color: #8B5E3C; /* Marron Cuir du CV */
+            --text-dark: #2D2D2D;
+            --card-bg: #FFFFFF;
+        }
 
-            h1 {
-                font-size: 2.5rem;
-                color: #2c3e50;
-                margin-bottom: 10px;
-            }
+        body {
+            background-color: var(--bg-color);
+            color: var(--text-dark);
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            line-height: 1.6;
+        }
 
-            p {
-                font-size: 1.2rem;
-                margin-bottom: 30px;
-                color: #555;
-                max-width: 600px;
-                line-height: 1.6;
-            }
+        header {
+            height: 60vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 20px;
+        }
 
-            .btn-cv {
-                display: inline-block;
-                padding: 15px 30px;
-                background-color: #2c3e50;
-                color: white;
-                text-decoration: none;
-                border-radius: 8px;
-                font-weight: bold;
-                font-size: 1.1rem;
-                transition: background-color 0.3s ease, transform 0.2s ease;
-                box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            }
+        h1 {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 3rem;
+            text-transform: uppercase;
+            margin-bottom: 10px;
+            letter-spacing: -1px;
+        }
 
-            /* Reprise de la couleur accent (Marron Cuir) de ton CV au survol */
-            .btn-cv:hover {
-                background-color: #8B5E3C;
-                transform: translateY(-2px);
-            }
-            /* --- RESPONSIVE MOBILE --- */
-            @media screen and (max-width: 850px) {
-                body {
-                    padding: 0;
-                    background-color: var(--bg-sidebar); /* Fond uni sur mobile */
-                }
+        .badge {
+            background-color: var(--accent-color);
+            color: white;
+            padding: 5px 15px;
+            border-radius: 20px;
+            font-size: 0.9rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            margin-bottom: 20px;
+        }
 
-                .page {
-                    width: 100%;
-                    height: auto; /* On laisse la hauteur s'adapter au contenu */
-                    flex-direction: column; /* On empile les éléments l'un sur l'autre */
-                    box-shadow: none; /* On retire l'ombre pour un look "app" */
-                }
+        .intro {
+            max-width: 600px;
+            font-size: 1.1rem;
+            color: #555;
+        }
 
-                /* La sidebar prend toute la largeur */
-                .sidebar {
-                    width: 100%;
-                    height: auto;
-                    padding: 30px 20px;
-                    text-align: center; /* Centre le texte (optionnel, souvent plus joli sur mobile) */
-                }
+        .cta-container {
+            margin-top: 30px;
+        }
 
-                /* Ajustement de la photo pour qu'elle soit bien centrée */
-                .photo-wrapper {
-                    margin-bottom: 20px;
-                }
+        .btn {
+            text-decoration: none;
+            padding: 12px 25px;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: 0.3s;
+            display: inline-block;
+            margin: 5px;
+        }
 
-                /* On réaligne les infos de contact au centre si on veut, ou on laisse en colonne */
-                .contact-info {
-                    align-items: center; /* Centre les items de contact */
-                }
+        .btn-primary { background: var(--text-dark); color: white; }
+        .btn-primary:hover { background: var(--accent-color); }
+        .btn-secondary { border: 2px solid var(--text-dark); color: var(--text-dark); }
+        .btn-secondary:hover { background: var(--text-dark); color: white; }
 
-                /* Le contenu principal prend aussi toute la largeur */
-                .main {
-                    width: 100%;
-                    padding: 30px 20px;
-                }
+        section {
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 50px 20px;
+        }
 
-                /* Ajustement de la taille du titre pour mobile */
-                h1 {
-                    font-size: 2rem;
-                    text-align: center;
-                }
+        h2 {
+            font-family: 'Montserrat', sans-serif;
+            text-transform: uppercase;
+            border-bottom: 3px solid var(--accent-color);
+            display: inline-block;
+            margin-bottom: 30px;
+        }
 
-                .subtitle, .availability {
-                    text-align: center;
-                }
-            }
-        </style>
-    </head>
-    <body>
-        <h1>Portfolio en maintenance 🚧</h1>
-        
-        <p>
-            Reviens très bientôt (quand j'aurai assez de cafés pour bosser dessus ☕).
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+
+        .card {
+            background: var(--card-bg);
+            padding: 25px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+            transition: transform 0.3s;
+        }
+
+        .card:hover { transform: translateY(-5px); }
+
+        .card i { font-size: 2rem; color: var(--accent-color); margin-bottom: 15px; }
+
+        .card h3 { margin-top: 0; font-family: 'Montserrat', sans-serif; }
+
+        .tags { margin-top: 15px; }
+        .tag {
+            font-size: 0.75rem;
+            background: #eee;
+            padding: 3px 8px;
+            border-radius: 4px;
+            margin-right: 5px;
+            font-weight: bold;
+        }
+
+        footer {
+            text-align: center;
+            padding: 40px;
+            font-size: 0.9rem;
+            color: #777;
+        }
+
+        @media (max-width: 600px) {
+            h1 { font-size: 2rem; }
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <div class="badge">Disponible pour stage (Juillet 2026)</div>
+        <h1>Adam Kattouf</h1>
+        <p class="intro">
+            Étudiant à <strong>Epitech Lille</strong>
         </p>
-        
-        <a href="cv.html" class="btn-cv">Vous pouvez checker mon CV pour l'instant</a>
-    </body>
+        <div class="cta-container">
+            <a href="cv.html" class="btn btn-primary"><i class="fas fa-file-pdf"></i> Voir mon CV</a>
+            <a href="https://github.com/Cociska" class="btn btn-secondary"><i class="fab fa-github"></i> GitHub</a>
+        </div>
+    </header>
+
+    <section id="projets">
+        <h2>Projets & Labo</h2>
+        <div class="grid">
+            <div class="card">
+                <i class="fas fa-server"></i>
+                <h3>Infrastructure Home-Lab</h3>
+                <p>Gestion de mon propre serveur domestique (cociska.dev). Automatisation avec n8n et déploiement de services via Docker.</p>
+                <div class="tags">
+                    <span class="tag">Docker</span>
+                    <span class="tag">Raspberry Pi</span>
+                    <span class="tag">n8n</span>
+                </div>
+            </div>
+
+            <div class="card">
+                <i class="fas fa-code"></i>
+                <h3>Projets Epitech (C)</h3>
+                <p>Développement de projets système : My_Radar (simulation de trafic aérien) et implémentation de tables de hachage sécurisées.</p>
+                <div class="tags">
+                    <span class="tag">Langage C</span>
+                    <span class="tag">CSFML</span>
+                    <span class="tag">Algorithmie</span>
+                </div>
+            </div>
+
+            <div class="card">
+                <i class="fas fa-terminal"></i>
+                <h3>Admin Système & Security</h3>
+                <p>Configuration avancée de Linux (Arch, Fedora), durcissement SSH et scripting Bash pour l'automatisation.</p>
+                <div class="tags">
+                    <span class="tag">Linux</span>
+                    <span class="tag">Bash</span>
+                    <span class="tag">SSH</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>2026 Adam Kattouf - Hébergé sur mon infrastructure personnelle</p>
+    </footer>
+
+</body>
 </html>
